2012-02-28  Ryosuke Niwa  <rniwa@webkit.org>

        Chromium build fix attempt.

        * src/WebDragData.cpp:

2012-02-28  Jonathan Backer  <backer@chromium.org>

        [chromium] Reset damage tracker on visibility change.
        https://bugs.webkit.org/show_bug.cgi?id=79267

        Reviewed by James Robinson.

        * tests/CCLayerTreeHostImplTest.cpp:
        (WebKit::PartialSwapTrackerContext::getString):
        (WebKit):
        (WebKit::TEST_F):

2012-02-28  Tim Dresser  <tdresser@chromium.org>

        Provide DefaultDeviceScaleFactor though WebSettings
        https://bugs.webkit.org/show_bug.cgi?id=79534

        Reviewed by Darin Fisher.

        * public/WebSettings.h:
        * src/WebSettingsImpl.cpp:
        (WebKit::WebSettingsImpl::setDefaultDeviceScaleFactor):
        (WebKit):
        * src/WebSettingsImpl.h:
        (WebSettingsImpl):

2012-02-28  Gary Kacmarcik  <garykac@chromium.org>

        [chromium] Set nativeKeyCode to include Windows scan code
        https://bugs.webkit.org/show_bug.cgi?id=79289

        Reviewed by Ryosuke Niwa.

        Set the key event's nativeKeyCode on Windows Chromium so that it
        actually includes the native scancode and other context bits.
        Currently on Windows, the nativeKeyCode is set to be the same value as
        the windowsKeyCode, which is redundant.

        The actual native key information is required so that components (like
        plugins) can reconstruct the original key event. The value stored in
        the windowsKeyCode is a Windows virtual key code which does not provide
        sufficient info to disambiguate the actual key being pressed (for
        example, it cannot distinguish between the left and right shift keys).

        All platforms except Windows currently send native key event info, so
        this change will bring Windows in line with other platforms.

        This change is part of our effort to send enhanced keycode information