@@ -1,3 +1,15 @@
+2012-02-28  Sheriff Bot  <webkit.review.bot@gmail.com>
+
+        Unreviewed, rolling out r107917 and r109188.
+        http://trac.webkit.org/changeset/107917
+        http://trac.webkit.org/changeset/109188
+        https://bugs.webkit.org/show_bug.cgi?id=79865
+
+        Fix the chromium build. (Requested by dcheng on #webkit).
+
+        * src/WebDragData.cpp:
+        (WebKit::WebDragData::items):
+
 2012-02-28  Ryosuke Niwa  <rniwa@webkit.org>
 
         Chromium build fix attempt.
